[gd_scene load_steps=5 format=3 uid="uid://gdnutflsqawt"]

[ext_resource type="Texture2D" uid="uid://byd4t58phaamo" path="res://Assets/Player/WhiteCircle1.png" id="1_exqsv"]
[ext_resource type="Script" uid="uid://cgj1rdr6s06rr" path="res://Props/dummy.gd" id="1_lbxqi"]
[ext_resource type="LabelSettings" uid="uid://ddwue5jn48ljw" path="res://UI/Style/new_label_settings.tres" id="3_mc7gf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lbxqi"]
radius = 7.0

[node name="Dummy" type="CharacterBody2D" groups=["damagable"]]
script = ExtResource("1_lbxqi")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.576471, 0.917647, 1)
texture = ExtResource("1_exqsv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lbxqi")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="DamageLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = 6.0
offset_top = -13.0
offset_right = 31.0
offset_bottom = 13.0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 50
text = "0"
label_settings = ExtResource("3_mc7gf")

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timeout"]
